<resources>
    <string name="app_name">MADDemo</string>
    <string name="app_content">Hello Android!</string>
    <string name="title_overview">Overview</string>
    <string name="title_detailview">Detailview</string>
    <string name="itemName_hint">New ToDo</string>
    <string name="itemDescription_hint">Describe your ToDo</string>
    <string name="duedate_hint">Due Date</string>
    <string name="duetime_hint">Due Time</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_by_importance">Sort by Importance</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="filterdone">Filter Done</string>
    <string name="filterunimportant">Filter Unimportant</string>
    <string name="unfilter">Delete Filter</string>
    <string name="contacts">No Contacts linked</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="noEmailError">This is not an E-Mail Address</string>
</resources>
