<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:weightSum="1"
    android:baselineAligned="false">

    <ToggleButton
        android:id="@+id/toggle_favButton"
        style="@style/toggleButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_toggle_fav_bg"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <ToggleButton
        android:id="@+id/toggle_doneButton"
        style="@style/toggleButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_toggle_done_bg"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/toggle_favButton" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itemName_hint"
        android:inputType="textCapWords"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/toggle_doneButton"
        android:layout_toLeftOf="@+id/toggle_doneButton" />

    <EditText
        android:id="@+id/itemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itemDescription_hint"
        android:inputType="textMultiLine"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/time_pick_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/itemDueDate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/duedate_hint"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:layout_below="@+id/itemName"
        android:layout_toEndOf="@+id/date_pick_button"
        android:layout_above="@+id/itemDescription" />

    <Button
        android:id="@+id/date_pick_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/calendar_black_24"
        android:src="@drawable/calendar_black_24"
        android:layout_below="@+id/itemName"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/itemDueTime"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/time_pick_button"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:layout_toEndOf="@+id/time_pick_button"
        android:layout_toRightOf="@+id/time_pick_button"
        android:hint="@string/duetime_hint"
        android:textSize="14sp"
        android:layout_above="@+id/itemDescription" />

    <Button
        android:id="@+id/time_pick_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/calendar_clock_black_24"
        android:src="@drawable/calendar_clock_black_24"
        android:layout_below="@+id/itemName"
        android:layout_toEndOf="@+id/itemDueDate" />

    <Button
        android:id="@+id/date_delete_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/calendar_remove_black_24"
        android:src="@drawable/calendar_remove_black_24"
        android:layout_alignTop="@+id/itemDueTime"
        android:layout_toEndOf="@+id/itemDueTime" />

    <Button
        android:id="@+id/addContactButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/account_plus_black_36"
        android:src="@drawable/account_plus_black_36"
        android:layout_alignTop="@+id/contactList"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/removeAllContactButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/account_remove_all_black_36"
        android:src="@drawable/account_remove_all_black_36"
        android:layout_below="@+id/addContactButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/contactList"
        android:hint="@string/contacts"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/itemDescription"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:paddingLeft="8dp"
        android:textSize="18sp"
        android:layout_alignStart="@+id/itemDueDate" />


</RelativeLayout>